# midi-keyboard

./: README.md  pedals.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yaml
src/midi_keyboard/: __main__.py
