[project]
name = 'midi-keyboard-parametalol'
description = 'MIDI to keyboard event mapper'
readme = 'README.md'
requires-python = '>=3.9,<4.0'
dynamic = ['version']
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
authors = [{ name = 'Michaël Petrov', email = 'smartptr@gmail.com' }]
dependencies = ['mido', 'evdev']
license = { file = "LICENSE" }

[project.urls]
Homepage = 'https://github.com/parametalol/midi-keyboard'
Issues = 'https://github.com/parametalol/midi-keyboard/issues'

[tool.hatch]
version = { attr = 'midi_keyboard.__version__', path = 'src/midi_keyboard/__init__.py' }

[tool.hatch.build.targets.wheel]
packages = ['src/midi_keyboard']

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.ruff]
select = [
    'E',
    'F',
    'W',
    'I',
    'YTT',
    'FA',
    'ISC',
    'ICN',
    'G',
    'C90',
    'N',
    'UP',
    'S',
    'B',
    'C4',
    'DTZ',
    'DJ',
    'PIE',
    'T20',
    'PT',
    'Q',
    'RSE',
    'RET',
    'SIM',
    'TID',
    'INT',
    'PTH',
    'PL',
]
line-length = 120
target-version = 'py39'
src = ["src"]

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.per-file-ignores]
'*' = ['S101', 'T201']

[tool.ruff.pylint]
max-args = 8

[tool.ruff.flake8-quotes]
inline-quotes = 'single'

[project.scripts]
cgpt = 'midi_keyboard.__main__:main'
